= Change log

1.4.0::
* Charpad support for CTM v.8 file format.

1.3.0::
* Spritepad support for SPD v.4, 5 file format.

1.2.0::
* Charpad support for CTM v.6, 7 file format.

1.1.1::
* Bugfix: #26 charpad: fixed map generation in CTM files without Tileset.

1.1.0::
* Support for `-define` parameters.
* Charpad support added (CTM v.5).
* Support for Gradle 7.

1.0.1::
* Support for Gradle 6.

1.0.0::
* Support for running 64spec tests using console mode of Vice.
* Support for CircleCI environment via dedicated Docker image.
* Work dir (.ra) can now be changed.

0.3.0::
* Support for source files patterns via includes.
* Support for excluding source files via patterns.

0.2.1::
* Support for Gradle 5.
* Build works with OpenJDK 12.

0.2.0::
* Support for downloading ASM libraries released from GitHub.
* Support for version number for selected assembler (KickAssembler only).

0.1.1::
* Support for configurable source dirs.

0.1.0::
* Support for KickAssembler.