@@ -40,7 +40,7 @@ jobs:
       - deploy:
           name: Deploy Release to GitHub
           command: |
-            if [ $CIRCLE_BRANCH == 'develop' ]; then
+            if [ $CIRCLE_BRANCH == 'master' ]; then
               bash .circleci/publish.sh
             fi
 
@@ -68,4 +68,4 @@ workflows:
             filters:
               branches:
                 only:
-                  - develop
+                  - master
