@@ -18,7 +18,7 @@ rm -R doc
 ls -al
 
 git add -fA
-git commit --allow-empty -m "$(git log develop -1 --pretty=%B)"
-git push -f origin develop:gh-pages
+git commit --allow-empty -m "$(git log master -1 --pretty=%B)"
+git push -f origin master:gh-pages
 
 echo "deployed successfully"
