@@ -26,7 +26,7 @@ package com.github.c64lib.retroassembler.charpad_processor
 import com.github.c64lib.retroassembler.domain.processor.BinaryProducer
 import com.github.c64lib.retroassembler.domain.processor.Output
 
-class CharsetMaterialsProducer(
+class CharMaterialsProducer(
     private val start: Int = 0, private val end: Int = 65536, output: Output<ByteArray>
 ) : BinaryProducer(output) {
   override fun write(data: ByteArray) =
