@@ -26,25 +26,15 @@ package com.github.c64lib.retroassembler.charpad_processor
 import com.github.c64lib.retroassembler.domain.processor.BinaryProducer
 import com.github.c64lib.retroassembler.domain.processor.Output
 
-/**
- * Produces primary color for characters. In Charpad 3.0 it is always the fourth byte (pen 11), it
- * normally goes to color RAM.
- */
-class CharColoursProducer(private val start: Int = 0, end: Int = 65536, output: Output<ByteArray>) :
-    BinaryProducer(output) {
-
-  private val scaledStart = scale(start)
-
-  private val scaledEnd = scale(end)
-
+class TileScreenColoursProducer(
+    private val start: Int = 0, private val end: Int = 65536, output: Output<ByteArray>
+) : BinaryProducer(output) {
   override fun write(data: ByteArray) =
       super.write(
           when {
-            scaledStart >= data.size ->
-                throw InsufficientDataException("Not enough characters to support start=$start")
-            scaledEnd < data.size -> data.copyOfRange(scaledStart, scaledEnd)
-            else -> data.copyOfRange(scaledStart, data.size)
+            start >= data.size ->
+                throw InsufficientDataException("Not enough bytes to support start = $start")
+            end < data.size -> data.copyOfRange(start, end)
+            else -> data.copyOfRange(start, data.size)
           })
-
-  private fun scale(value: Int) = value
 }
